--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <ul class="big">
                         <li>Praca w zespole 9 osobowym w metodyce Scrum</li>
                         <li>Rozwój projektu <a href="https://www.challengeme.gg/" target="_blank">ChallangeMe.gg</a></li>
-                        <li>Usuwanie błędów w systemie sklepów internetowych</li>
+                        <li>Usuwanie błędów w projekcie</li>
                         <li class="job-techs">
                             <i class="icon-git"></i>,
                             <i class="icon-linux-mint"></i>,
@@ -131,7 +131,7 @@
                             Firma specjalizująca się w tworzeniu rozwiązań internetowych i mobilnych dopasowanych do potrzeb swoich klientów.
                         </span>
                     <ul class="big">
-                        <li>Nauka podstaw platformy Adnroid</li>
+                        <li>Nauka podstaw platformy Android</li>
                         <li>Samodzilna realizacja własnych projektów</li>
                         <li class="job-techs">
                             <i class="icon-debian"></i>,
