--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <h2>Cele</h2>
                     <hr>
                 </header>
-                <p class="large">
+                <p class="big">
                     Znalezienie stałej, ambitnej i zapewniającej rozwój pracy jako back-end developer. Zatrudnienie chciałbym łączyć ze studiami zaocznymi na Zachodniopomorskim
                     Uniwersytecie Technologicznym (kierunek informatyka).
                 </p>
@@ -55,7 +55,7 @@
                         <h3>Staż PHP Developer</h3>
                         <h4 class="blue"><a href="https://www.iai-shop.com/" target="_blank">IAI S.A.</a></h4>
                     </header>
-                    <div class="row big">
+                    <div class="row">
                         <div class="col col-3">
                             <i class="fa fa-calendar exp-info" aria-hidden="true"></i><span>2017 czerwiec, lipiec</span>
                         </div>
@@ -63,11 +63,11 @@
                             <i class="fa fa-map-marker exp-info" aria-hidden="true"></i><span>Szczecin</span>
                         </div>
                     </div>
-                    <p class="big">
+                    <p>
                         <span>
                             Firma od ponad 12 latu zajmująca się tworzeniem i rozwojem oprogramowania ecommerce.
                         </span>
-                    <ul class="big">
+                    <ul>
                         <li>Praca w zespole 8 osobowym w metodyce Scrum</li>
                         <li>Rozwój oprogramowania ecommerce</li>
                         <li>Usuwanie błędów w systemie sklepów internetowych</li>
@@ -85,7 +85,7 @@
                         <h3>Praktyki PHP Developer</h3>
                         <h4 class="blue"><a href="http://red-sky.com/?lang=pl" target="_blank">Red Sky Sp. z o.o.</a></h4>
                     </header>
-                    <div class="row big">
+                    <div class="row">
                         <div class="col col-3">
                             <i class="fa fa-calendar exp-info" aria-hidden="true"></i><span>2017 czerwiec, lipiec</span>
                         </div>
@@ -93,11 +93,11 @@
                             <i class="fa fa-map-marker exp-info" aria-hidden="true"></i><span>Szczecin</span>
                         </div>
                     </div>
-                    <p class="big">
+                    <p>
                         <span>
                             Szczecińska firma będąca twórcą wielu projektów odwiedzanych przez miliony użytkowników miesięcznie.
                         </span>
-                    <ul class="big">
+                    <ul>
                         <li>Praca w zespole 9 osobowym w metodyce Scrum</li>
                         <li>Rozwój projektu <a href="https://www.challengeme.gg/" target="_blank">ChallangeMe.gg</a></li>
                         <li>Usuwanie błędów w projekcie</li>
@@ -118,7 +118,7 @@
                         <h3>Praktyki Android Developer</h3>
                         <h4 class="blue"><a href="http://softline.com.pl/pl" target="_blank">Softline Polska Sp. z o.o. sp. k.</a></h4>
                     </header>
-                    <div class="row big">
+                    <div class="row">
                         <div class="col col-3">
                             <i class="fa fa-calendar exp-info" aria-hidden="true"></i><span>2015 siepień</span>
                         </div>
@@ -126,11 +126,11 @@
                             <i class="fa fa-map-marker exp-info" aria-hidden="true"></i><span>Szczecin</span>
                         </div>
                     </div>
-                    <p class="big">
+                    <p>
                         <span>
                             Firma specjalizująca się w tworzeniu rozwiązań internetowych i mobilnych dopasowanych do potrzeb swoich klientów.
                         </span>
-                    <ul class="big">
+                    <ul>
                         <li>Nauka podstaw platformy Android</li>
                         <li>Samodzilna realizacja własnych projektów</li>
                         <li class="job-techs">
@@ -152,7 +152,7 @@
                         <h3>Technikum Informatyczne SCI</h3>
                         <h4 class="blue">Wykształcenie średnie, technik informatyk</h4>
                     </header>
-                    <div class="row big">
+                    <div class="row">
                         <div class="col col-3">
                             <i class="fa fa-calendar exp-info" aria-hidden="true"></i><span>2013 wrzesień - 2017 kwiecień</span>
                         </div>
@@ -160,7 +160,7 @@
                             <i class="fa fa-map-marker exp-info" aria-hidden="true"></i><span>Szczecin</span>
                         </div>
                     </div>
-                    <p class="big">
+                    <p>
                         Technikum ukończone z wyróżnieniem za wysokie wyniki w nauce, wzorowe zachowanie, organizację konkursu
                         programistycznego i prowadzenie koła GameDevu.
                     </p>
@@ -221,7 +221,7 @@
                     <hr>
                 </header>
                 <article class="job">
-                    <div class="row auto big">
+                    <div class="row auto">
                         <div class="col">
                             <span class="strong">Język polski</span>
                         </div>
@@ -243,7 +243,7 @@
                     <hr>
                 </header>
                 <article class="job">
-                    <div class="row big">
+                    <div class="row">
                         <div class="col col-1 blue diamond">
                             <i class="fa fa-diamond" aria-hidden="true"></i>
                         </div>
