--- a/index.html
+++ b/index.html
@@ -264,6 +264,25 @@
                     </div>
                 </article>
             </section>
+            <section>
+                <header>
+                    <h2>Zainteresowania</h2>
+                    <hr>
+                </header>
+                <article class="job">
+                    <div class="row auto">
+                        <div class="col">
+                            <ul>
+                                <li>Sporty walki</li>
+                                <li><span class="fat strong">Szeroko</span> rozumiana informatyka
+                                    <i class="fa fa-smile-o" aria-hidden="true"></i></li>
+                                <li>Kolarstwo, bieganie, siatkówka</li>
+                                <li>Poker</li>
+                            </ul>
+                        </div>
+                    </div>
+                </article>
+            </section>
         </div>
     </main>
     <script src="js/kube.min.js"></script>
