fav + theme color

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/techicons/font-mfizz.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#000000" />
     <link rel="stylesheet" href="https://use.fontawesome.com/50bb9ae1c5.css">
+    <link rel="icon" href="img/fav.png">
 </head>
 <body>
     <header class="row gutters align-center">
