--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     </header>
                     <div class="row">
                         <div class="col col-3">
-                            <i class="fa fa-calendar exp-info" aria-hidden="true"></i><span>2017 czerwiec, lipiec</span>
+                            <i class="fa fa-calendar exp-info" aria-hidden="true"></i><span>2016 sierpień</span>
                         </div>
                         <div class="col col-3">
                             <i class="fa fa-map-marker exp-info" aria-hidden="true"></i><span>Szczecin</span>
