--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     </header>
                     <div class="row">
                         <div class="col col-3">
-                            <i class="fa fa-calendar exp-info" aria-hidden="true"></i><span>2015 siepień</span>
+                            <i class="fa fa-calendar exp-info" aria-hidden="true"></i><span>2015 wrzesień</span>
                         </div>
                         <div class="col col-3">
                             <i class="fa fa-map-marker exp-info" aria-hidden="true"></i><span>Szczecin</span>
