--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             Firma od ponad 12 latu zajmująca się tworzeniem i rozwojem oprogramowania ecommerce.
                         </span>
                     <ul>
-                        <li>Praca w zespole 8 osobowym w metodyce Scrum</li>
+                        <li>Praca w zespole 8-osobowym w metodyce Scrum</li>
                         <li>Rozwój oprogramowania ecommerce</li>
                         <li>Usuwanie błędów w systemie sklepów internetowych</li>
                         <li class="job-techs">
@@ -100,7 +100,7 @@
                             Szczecińska firma będąca twórcą wielu projektów odwiedzanych przez miliony użytkowników miesięcznie.
                         </span>
                     <ul>
-                        <li>Praca w zespole 9 osobowym w metodyce Scrum</li>
+                        <li>Praca w zespole 9-osobowym w metodyce Scrum</li>
                         <li>Rozwój projektu <a href="https://www.challengeme.gg/" target="_blank">ChallangeMe.gg</a></li>
                         <li>Usuwanie błędów w projekcie</li>
                         <li class="job-techs">
@@ -251,7 +251,7 @@
                         </div>
                         <div class="col col-5">
                             <p class="strong">Ambicja</p>
-                            <p>Chętnie uczę się nowych rzeczy i poznaję nieznane mi wczesniej technologie.
+                            <p>Chętnie uczę się nowych rzeczy i poznaję nieznane mi wcześniej technologie.
                                 Szczególnie istotne jest dla mnie przyswajanie najlepszych praktyk związanych z programowaniem.
                             </p>
                         </div>
@@ -260,7 +260,7 @@
                         </div>
                         <div class="col col-5">
                             <p class="strong">Odpowiedzialność</p>
-                            <p>Nabyta podczas 3 letnich doświadczeń jako wychowawca kolonijny na obozach sportowych dla dzieci i młodzieży,
+                            <p>Nabyta podczas 3-letnich doświadczeń jako wychowawca kolonijny na obozach sportowych dla dzieci i młodzieży
                                 oraz instruktor Aikido.</p>
                         </div>
                     </div>
