--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                                 <li><span class="fat strong">Szeroko</span> rozumiana informatyka
                                     <i class="fa fa-smile-o" aria-hidden="true"></i></li>
                                 <li>Kolarstwo, bieganie, siatkówka</li>
-                                <li>Poker</li>
+                                <li>Strategie Texas Holdem</li>
                             </ul>
                         </div>
                     </div>
