--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
                     </div>
                     <p>
                         <span>
-                            Firma od ponad 12 latu zajmująca się tworzeniem i rozwojem oprogramowania ecommerce.
+                            Firma od ponad 12 latu zajmująca się tworzeniem i rozwojem oprogramowania e-commerce.
                         </span>
                     <ul>
                         <li>Praca w zespole 8-osobowym w metodyce Scrum</li>
-                        <li>Rozwój oprogramowania ecommerce</li>
+                        <li>Rozwój oprogramowania e-commerce</li>
                         <li>Usuwanie błędów w systemie sklepów internetowych</li>
                         <li class="job-techs">
                             <i class="icon-git"></i>,
@@ -134,7 +134,7 @@
                         </span>
                     <ul>
                         <li>Nauka podstaw platformy Android</li>
-                        <li>Samodzilna realizacja własnych projektów</li>
+                        <li>Samodzielna realizacja własnych projektów</li>
                         <li class="job-techs">
                             <i class="icon-debian"></i>,
                             <i class="icon-mysql"></i>,
