--- a/index.html
+++ b/index.html
@@ -285,6 +285,15 @@
                     </div>
                 </article>
             </section>
+            <section>
+                <article class="job">
+                    <div class="row auto">
+                        <p class="small">
+                            Wyrażam zgodę na przetwarzanie moich danych osobowych dla potrzeb niezbędnych do realizacji procesu rekrutacji (zgodnie z Ustawą z dnia 29.08.1997 roku o Ochronie Danych Osobowych; tekst jednolity: Dz. U. 2016 r. poz. 922).
+                        </p>
+                    </div>
+                </article>
+            </section>
         </div>
     </main>
     <script src="js/kube.min.js"></script>
