--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="row gutters align-center">
         <div class="col col-6">
             <h1 class="title">Maciej Jaworski</h1>
-            <h3 class="blue">Junior Back-end Developer</h3>
+            <h3 class="blue">Back-end Developer</h3>
             <table class="unstyled">
                 <tbody>
                     <tr>
@@ -43,8 +43,7 @@
                     <hr>
                 </header>
                 <p class="big">
-                    Znalezienie stałej, ambitnej i zapewniającej rozwój pracy jako back-end developer. Zatrudnienie chciałbym łączyć ze studiami zaocznymi na Zachodniopomorskim
-                    Uniwersytecie Technologicznym (kierunek informatyka).
+                    Rozwijanie wiedzy i umiejętności na pograniczu specjalizacji Software Engineer oraz DevOps. Projektowanie, implementacja, wdrożenia oraz utrzymanie ambitnych projektów opartych o testy i przemyślane (<i>SOLID</i>ne) rozwiązania architektoniczne. Tworzenie udokumentowanego, czystego kodu; otwartego na zmiany, niezależnego od bibliotek i frameworków.
                 </p>
             </section>
             <section class="jobs">
@@ -52,6 +51,72 @@
                     <h2>Doświadczenie zawodowe</h2>
                     <hr>
                 </header>
+                <article class="job">
+                    <header>
+                        <h3>Junior PHP Developer</h3>
+                        <h4 class="blue"><a href="https://dige.rs/" target="_blank">Digers</a></h4>
+                    </header>
+                    <div class="row">
+                        <div class="col col-3">
+                            <i class="fa fa-calendar exp-info" aria-hidden="true"></i><span>2018 styczeń - obecnie</span>
+                        </div>
+                        <div class="col col-3">
+                            <i class="fa fa-map-marker exp-info" aria-hidden="true"></i><span>Szczecin</span>
+                        </div>
+                    </div>
+                    <p>
+                        <span>
+                            Szczeciński software house dostarczający własne rozwiązania programistyczne dla klientów z całej Europy.
+                        </span>
+                    <ul>
+                        <li>Praca w mieszanych, kilkuosobowych zespołach</li>
+                        <li>Organizacja pracy oparta o agilowe metody</li>
+                        <li>Rozwój, naprawa, utrzymanie i wdrożenia aplikacji opartych o RestApi</li>
+                        <li>Rozwijanie aplikacji mobilnych</li>
+                        <li class="job-techs">
+                            <i class="icon-symfony"></i>,
+                            <i class="icon-mariadb"></i>,
+                            <i class="icon-debian"></i>
+                            <i class="icon-git"></i>,
+                            <i class="icon-linux-mint"></i>,
+                            <i class="icon-docker"></i>,
+                            <i class="icon-nginx"></i>,
+                            <i class="icon-reactjs"></i>,
+                            <i class="icon-php"></i>,
+                            <i class="icon-javascript"></i>
+                        </li>
+                    </ul>
+                    </p>
+                </article>
+                <article class="job">
+                    <header>
+                        <h3>Junior PHP Developer</h3>
+                        <h4 class="blue"><a href="https://www.squiz.net/pl" target="_blank">Squiz Poland</a></h4>
+                    </header>
+                    <div class="row">
+                        <div class="col col-3">
+                            <i class="fa fa-calendar exp-info" aria-hidden="true"></i><span>2017 październik - grudzień</span>
+                        </div>
+                        <div class="col col-3">
+                            <i class="fa fa-map-marker exp-info" aria-hidden="true"></i><span>Szczecin</span>
+                        </div>
+                    </div>
+                    <p>
+                        <span>
+                            Międzynarodowa agencja wdrażająca rozwiązania cyfryzacyjne.
+                        </span>
+                    <ul>
+                        <li>Praca w metodyce Scrum</li>
+                        <li>Rozwój oraz utrzymanie systemów <a href="https://www.sugarcrm.com/" target="_blank">SugarCRM</a></li>
+                        <li class="job-techs">
+                            <i class="icon-git"></i>,
+                            <i class="icon-osx"></i>,
+                            <i class="icon-php"></i>,
+                            <i class="icon-mysql"></i>
+                        </li>
+                    </ul>
+                    </p>
+                </article>
                 <article class="job">
                     <header>
                         <h3>Staż PHP Developer</h3>
@@ -149,6 +214,22 @@
                     <h2>Edukacja</h2>
                     <hr>
                 </header>
+                <article class="job">
+                    <header>
+                        <h3>Zachodniopomorski Uniwersytet Technologiczny</h3>
+                        <h4 class="blue">Wydział Informatyki, kierunek: informatyka</h4>
+                    </header>
+                    <div class="row">
+                        <div class="col col-3">
+                            <i class="fa fa-calendar exp-info" aria-hidden="true"></i><span>2017 październik - obecnie</span>
+                        </div>
+                        <div class="col col-3">
+                            <i class="fa fa-map-marker exp-info" aria-hidden="true"></i><span>Szczecin</span>
+                        </div>
+                    </div>
+                    <p>
+                    </p>
+                </article>
                 <article class="job">
                     <header>
                         <h3>Technikum Informatyczne SCI</h3>
