--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <hr>
                 </header>
                 <p class="big">
-                    Rozwijanie wiedzy i umiejętności na pograniczu specjalizacji Software Engineer oraz DevOps. Projektowanie, implementacja, wdrożenia oraz utrzymanie ambitnych projektów opartych o testy i przemyślane (<i>SOLID</i>ne) rozwiązania architektoniczne. Tworzenie udokumentowanego, czystego kodu; otwartego na zmiany, niezależnego od bibliotek i frameworków.
+                    Poszerzanie wiedzy i rozwijanie praktycznych umiejętności na pograniczu specjalizacji Software Engineer oraz DevOps. Projektowanie, implementacja, wdrożenia oraz utrzymanie ambitnych projektów opartych o testy i przemyślane (<i>SOLID</i>ne) rozwiązania architektoniczne. Tworzenie udokumentowanego, czystego kodu; otwartego na zmiany, niezależnego od bibliotek i frameworków.
                 </p>
             </section>
             <section class="jobs">
