changed for ola

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
     <meta charset="UTF-8">
-    <title>Maciej Jaworski</title>
+    <title>Aleksandra Potyrała</title>
     <link rel="stylesheet" href="css/kube.min.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/techicons/font-mfizz.css">
@@ -14,21 +14,21 @@
 <body>
     <header class="row gutters align-center">
         <div class="col col-6">
-            <h1 class="title">Maciej Jaworski</h1>
-            <h3 class="blue">Back-end Developer</h3>
+            <h1 class="title">Aleksandra Potyrała</h1>
+            <h3 class="blue">Junior Account Manager</h3>
             <table class="unstyled">
                 <tbody>
                     <tr>
                         <td class="blue info"><i class="fa fa-mobile" aria-hidden="true"></i></td>
-                        <td>696 906 798</td>
+                        <td>603 202 478</td>
                         <td class="blue info"><i class="fa fa-at" aria-hidden="true"></i></td>
-                        <td>mrjavorro@gmail.com</td>
+                        <td>pinne.que@gmail.com</td>
                     </tr>
                     <tr>
-                        <td class="blue info"><i class="fa fa-comments-o" aria-hidden="true"></i></td>
-                        <td><a href="https://forum.pasja-informatyki.pl/user/Ehlert" target="_blank">Forum Pasja Informatyki</a></td>
                         <td class="blue info"><i class="fa fa-map-marker" aria-hidden="true"></i></td>
                         <td>Szczecin</td>
+                        <td class="blue info"><i class="fa fa-home" aria-hidden="true"></i></td>
+                        <td>ul. Kruszcowa 25</td>
                     </tr>
                 </tbody>
             </table>
@@ -43,7 +43,7 @@
                     <hr>
                 </header>
                 <p class="big">
-                    Poszerzanie wiedzy i rozwijanie praktycznych umiejętności na pograniczu specjalizacji Software Engineer oraz DevOps. Projektowanie, implementacja, wdrożenia oraz utrzymanie ambitnych projektów opartych o testy i przemyślane (<i>SOLID</i>ne) rozwiązania architektoniczne. Tworzenie udokumentowanego, czystego kodu; otwartego na zmiany, niezależnego od bibliotek i frameworków.
+                    Znalezienie stałej, ambitnej pracy pozwalającej na rowzwój w zakresie obsługi klienta. Możliwość poszerzenia wiedzy dotyczącej ecommerce.
                 </p>
             </section>
             <section class="jobs">
@@ -53,12 +53,12 @@
                 </header>
                 <article class="job">
                     <header>
-                        <h3>Junior PHP Developer</h3>
-                        <h4 class="blue"><a href="https://dige.rs/" target="_blank">Digers</a></h4>
+                        <h3>Sprzedawca</h3>
+                        <h4 class="blue"><a href="http://red-sky.com/?lang=pl" target="_blank">WI ZUT</a></h4>
                     </header>
                     <div class="row">
                         <div class="col col-3">
-                            <i class="fa fa-calendar exp-info" aria-hidden="true"></i><span>2018 styczeń - obecnie</span>
+                            <i class="fa fa-calendar exp-info" aria-hidden="true"></i><span>2017 październik - 2018 czerwiec</span>
                         </div>
                         <div class="col col-3">
                             <i class="fa fa-map-marker exp-info" aria-hidden="true"></i><span>Szczecin</span>
@@ -66,145 +66,12 @@
                     </div>
                     <p>
                         <span>
-                            Szczeciński software house dostarczający własne rozwiązania programistyczne dla klientów z całej Europy.
+                            Sprzedaż w uczelnianym sklepie.
                         </span>
                     <ul>
-                        <li>Praca w mieszanych, kilkuosobowych zespołach</li>
-                        <li>Organizacja pracy oparta o agilowe metody</li>
-                        <li>Rozwój, naprawa, utrzymanie i wdrożenia aplikacji opartych o RestApi</li>
-                        <li>Rozwijanie aplikacji mobilnych</li>
-                        <li class="job-techs">
-                            <i class="icon-symfony"></i>,
-                            <i class="icon-mariadb"></i>,
-                            <i class="icon-debian"></i>
-                            <i class="icon-git"></i>,
-                            <i class="icon-linux-mint"></i>,
-                            <i class="icon-docker"></i>,
-                            <i class="icon-nginx"></i>,
-                            <i class="icon-reactjs"></i>,
-                            <i class="icon-php"></i>,
-                            <i class="icon-javascript"></i>
-                        </li>
-                    </ul>
-                    </p>
-                </article>
-                <article class="job">
-                    <header>
-                        <h3>Junior PHP Developer</h3>
-                        <h4 class="blue"><a href="https://www.squiz.net/pl" target="_blank">Squiz Poland</a></h4>
-                    </header>
-                    <div class="row">
-                        <div class="col col-3">
-                            <i class="fa fa-calendar exp-info" aria-hidden="true"></i><span>2017 październik - grudzień</span>
-                        </div>
-                        <div class="col col-3">
-                            <i class="fa fa-map-marker exp-info" aria-hidden="true"></i><span>Szczecin</span>
-                        </div>
-                    </div>
-                    <p>
-                        <span>
-                            Międzynarodowa agencja wdrażająca rozwiązania cyfryzacyjne.
-                        </span>
-                    <ul>
-                        <li>Praca w metodyce Scrum</li>
-                        <li>Rozwój oraz utrzymanie systemów <a href="https://www.sugarcrm.com/" target="_blank">SugarCRM</a></li>
-                        <li class="job-techs">
-                            <i class="icon-git"></i>,
-                            <i class="icon-osx"></i>,
-                            <i class="icon-php"></i>,
-                            <i class="icon-mysql"></i>
-                        </li>
-                    </ul>
-                    </p>
-                </article>
-                <article class="job">
-                    <header>
-                        <h3>Staż PHP Developer</h3>
-                        <h4 class="blue"><a href="https://www.iai-shop.com/" target="_blank">IAI S.A.</a></h4>
-                    </header>
-                    <div class="row">
-                        <div class="col col-3">
-                            <i class="fa fa-calendar exp-info" aria-hidden="true"></i><span>2017 czerwiec, lipiec</span>
-                        </div>
-                        <div class="col col-3">
-                            <i class="fa fa-map-marker exp-info" aria-hidden="true"></i><span>Szczecin</span>
-                        </div>
-                    </div>
-                    <p>
-                        <span>
-                            Firma od ponad 12 latu zajmująca się tworzeniem i rozwojem oprogramowania e-commerce.
-                        </span>
-                    <ul>
-                        <li>Praca w zespole 8-osobowym w metodyce Scrum</li>
-                        <li>Rozwój oprogramowania e-commerce</li>
-                        <li>Usuwanie błędów w systemie sklepów internetowych</li>
-                        <li class="job-techs">
-                            <i class="icon-git"></i>,
-                            <i class="icon-osx"></i>,
-                            <i class="icon-php"></i>,
-                            <i class="icon-mysql"></i>
-                        </li>
-                    </ul>
-                    </p>
-                </article>
-                <article class="job">
-                    <header>
-                        <h3>Praktyki PHP Developer</h3>
-                        <h4 class="blue"><a href="http://red-sky.com/?lang=pl" target="_blank">Red Sky Sp. z o.o.</a></h4>
-                    </header>
-                    <div class="row">
-                        <div class="col col-3">
-                            <i class="fa fa-calendar exp-info" aria-hidden="true"></i><span>2016 sierpień</span>
-                        </div>
-                        <div class="col col-3">
-                            <i class="fa fa-map-marker exp-info" aria-hidden="true"></i><span>Szczecin</span>
-                        </div>
-                    </div>
-                    <p>
-                        <span>
-                            Szczecińska firma będąca twórcą wielu projektów odwiedzanych przez miliony użytkowników miesięcznie.
-                        </span>
-                    <ul>
-                        <li>Praca w zespole 9-osobowym w metodyce Scrum</li>
-                        <li>Rozwój projektu <a href="https://www.challengeme.gg/" target="_blank">ChallangeMe.gg</a></li>
-                        <li>Usuwanie błędów w projekcie</li>
-                        <li class="job-techs">
-                            <i class="icon-git"></i>,
-                            <i class="icon-linux-mint"></i>,
-                            <i class="icon-php"></i>,
-                            <i class="icon-mysql"></i>,
-                            <i class="icon-nodejs"></i>,
-                            <i class="icon-symfony"></i>,
-                            <i class="icon-javascript"></i>
-                        </li>
-                    </ul>
-                    </p>
-                </article>
-                <article class="job">
-                    <header>
-                        <h3>Praktyki Android Developer</h3>
-                        <h4 class="blue"><a href="http://softline.com.pl/pl" target="_blank">Softline Polska Sp. z o.o. sp. k.</a></h4>
-                    </header>
-                    <div class="row">
-                        <div class="col col-3">
-                            <i class="fa fa-calendar exp-info" aria-hidden="true"></i><span>2015 wrzesień</span>
-                        </div>
-                        <div class="col col-3">
-                            <i class="fa fa-map-marker exp-info" aria-hidden="true"></i><span>Szczecin</span>
-                        </div>
-                    </div>
-                    <p>
-                        <span>
-                            Firma specjalizująca się w tworzeniu rozwiązań internetowych i mobilnych dopasowanych do potrzeb swoich klientów.
-                        </span>
-                    <ul>
-                        <li>Nauka podstaw platformy Android</li>
-                        <li>Samodzielna realizacja własnych projektów</li>
-                        <li class="job-techs">
-                            <i class="icon-debian"></i>,
-                            <i class="icon-mysql"></i>,
-                            <i class="fa fa-android" aria-hidden="true"></i>
-                        </li>
+                        <li>Kontakt z wieloma klientami</li>
+                        <li>Dbanie o powierzone mienie</li>
+                        <li>Obsługa komputera: drukowanie oraz kserowanie</li>
                     </ul>
                     </p>
                 </article>
@@ -216,84 +83,27 @@
                 </header>
                 <article class="job">
                     <header>
-                        <h3>Zachodniopomorski Uniwersytet Technologiczny</h3>
-                        <h4 class="blue">Wydział Informatyki, kierunek: informatyka</h4>
+                        <h3>Centrum Edukacyjne MENTOR</h3>
                     </header>
                     <div class="row">
                         <div class="col col-3">
-                            <i class="fa fa-calendar exp-info" aria-hidden="true"></i><span>2017 październik - obecnie</span>
+                            <i class="fa fa-calendar exp-info" aria-hidden="true"></i><span>2018 wrzesień - obecnie</span>
                         </div>
                         <div class="col col-3">
                             <i class="fa fa-map-marker exp-info" aria-hidden="true"></i><span>Szczecin</span>
                         </div>
                     </div>
-                    <p>
-                    </p>
                 </article>
                 <article class="job">
                     <header>
-                        <h3>Technikum Informatyczne SCI</h3>
-                        <h4 class="blue">Wykształcenie średnie, technik informatyk</h4>
+                        <h3>IX Liceum Ogólnokształcące w Szczecie</h3>
                     </header>
                     <div class="row">
                         <div class="col col-3">
-                            <i class="fa fa-calendar exp-info" aria-hidden="true"></i><span>2013 wrzesień - 2017 kwiecień</span>
+                            <i class="fa fa-calendar exp-info" aria-hidden="true"></i><span>2016 wrzesień - 2018 czerwiec</span>
                         </div>
                         <div class="col col-3">
                             <i class="fa fa-map-marker exp-info" aria-hidden="true"></i><span>Szczecin</span>
-                        </div>
-                    </div>
-                    <p>
-                        Technikum ukończone z wyróżnieniem za wysokie wyniki w nauce, wzorowe zachowanie, organizację konkursu
-                        programistycznego i prowadzenie koła GameDevu.
-                    </p>
-                </article>
-            </section>
-            <section>
-                <header>
-                    <h2>Technologie</h2>
-                    <h4 class="blue">Technologie i języki, z których korzystam</h4>
-                    <hr>
-                </header>
-                <article class="job">
-                    <div class="row auto">
-                        <div class="col skills-ico">
-                            <i class="fa fa-linux" aria-hidden="true"></i>
-                            <progress max="100" value="60"></progress>
-                        </div>
-                        <div class="col skills-ico">
-                            <i class="icon-mysql"></i>
-                            <progress max="100" value="60"></progress>
-                        </div>
-                    </div>
-                    <div class="row auto">
-                        <div class="col skills-ico">
-                            <i class="icon-symfony"></i>
-                            <progress max="100" value="60"></progress>
-                        </div>
-                        <div class="col skills-ico">
-                            <i class="icon-php"></i>
-                            <progress max="100" value="70"></progress>
-                        </div>
-                    </div>
-                    <div class="row auto">
-                        <div class="col skills-ico">
-                            <i class="icon-html5"></i>
-                            <progress max="100" value="50"></progress>
-                        </div>
-                        <div class="col skills-ico">
-                            <i class="icon-docker"></i>
-                            <progress max="100" value="40"></progress>
-                        </div>
-                    </div>
-                    <div class="row auto">
-                        <div class="col skills-ico">
-                            <i class="icon-javascript"></i>
-                            <progress max="100" value="60"></progress>
-                        </div>
-                        <div class="col skills-ico">
-                            <i class="icon-git"></i>
-                            <progress max="100" value="45"></progress>
                         </div>
                     </div>
                 </article>
@@ -315,7 +125,13 @@
                             <span class="strong">Język angielski</span>
                         </div>
                         <div class="col">
-                            <progress max="100" value="45"></progress>
+                            <progress max="100" value="65"></progress>
+                        </div>
+                        <div class="col">
+                            <span class="strong">Język niemiecki</span>
+                        </div>
+                        <div class="col">
+                            <progress max="100" value="35"></progress>
                         </div>
                     </div>
                 </article>
@@ -332,17 +148,15 @@
                         </div>
                         <div class="col col-5">
                             <p class="strong">Ambicja</p>
-                            <p>Chętnie uczę się nowych rzeczy i poznaję nieznane mi wcześniej technologie.
-                                Szczególnie istotne jest dla mnie przyswajanie najlepszych praktyk związanych z programowaniem.
+                            <p>Chętnię uczę się nowych rzeczy, czerpię satysfakcję z nabywania nowych doświadczeń, oraz stale rozwijam swój angielski.
                             </p>
                         </div>
                         <div class="col col-1 blue diamond">
                             <i class="fa fa-diamond" aria-hidden="true"></i>
                         </div>
                         <div class="col col-5">
-                            <p class="strong">Odpowiedzialność</p>
-                            <p>Nabyta podczas 3-letnich doświadczeń jako wychowawca kolonijny na obozach sportowych dla dzieci i młodzieży
-                                oraz instruktor Aikido.</p>
+                            <p class="strong">Komunikatywność</p>
+                            <p>Bardzo lubię pracę z ludźmi. Jestem osobą bezkonfliktową i dobrze radzę sobie w sytuacjach stresowych. Sukcesem jest dla mnie nawiązanie trwałej relacji z drugim człowiekiem.</p>
                         </div>
                     </div>
                 </article>
@@ -356,11 +170,11 @@
                     <div class="row auto">
                         <div class="col">
                             <ul>
-                                <li>Sporty walki</li>
-                                <li><span class="fat strong">Szeroko</span> rozumiana informatyka
-                                    <i class="fa fa-smile-o" aria-hidden="true"></i></li>
-                                <li>Kolarstwo, bieganie, siatkówka</li>
-                                <li>Strategie Texas Holdem</li>
+                                <li>Boks</li>
+                                <li>Kulturoznawstwo, języki dalekiego zachodu</li>
+                                <li>Psychologia</li>
+                                <li>Jada konna</li>
+                                <li>Sztuka, muzyka</li>
                             </ul>
                         </div>
                     </div>
